moved a number of things that depends on other mods into conditionals