@@ -1,16 +1,11 @@
 package net.fettlol.lib.list;
 
-import net.minecraft.util.Identifier;
-
-import java.util.Arrays;
 import java.util.List;
 
 public class BlockLootTableGroups {
-
     public static List<String> SPAWNERS;
 
     static {
-        SPAWNERS = Arrays.asList("minecraft:blocks/spawner");
+        SPAWNERS = List.of("minecraft:blocks/spawner");
     }
-
 }
