@@ -1,20 +1,65 @@
 package net.fettlol.lib.list;
 
 import net.minecraft.loot.LootTables;
+import net.minecraft.util.Identifier;
 
-import java.util.Arrays;
 import java.util.List;
 
+/**
+ * This class contains a number of lists relating to gameplay mechanics.
+ */
 public class GameplayLootTableGroups {
 
     public static List<String> CAT_MORNING_GIFT;
+    public static List<String> FISHING_JUNK;
     public static List<String> FISHING_TREASURES;
     public static List<String> PIGLIN_BARTERING;
+    public static List<String> VILLAGER_HERO_ARMORER_GIFT;
+    public static List<String> VILLAGER_HERO_BUTCHER_GIFT;
+    public static List<String> VILLAGER_HERO_CARTOGRAPHER_GIFT;
+    public static List<String> VILLAGER_HERO_CLERIC_GIFT;
+    public static List<String> VILLAGER_HERO_FARMER_GIFT;
+    public static List<String> VILLAGER_HERO_FISHERMAN_GIFT;
+    public static List<String> VILLAGER_HERO_FLETCHER_GIFT;
+    public static List<String> VILLAGER_HERO_LEATHERWORKER_GIFT;
+    public static List<String> VILLAGER_HERO_LIBRARIAN_GIFT;
+    public static List<String> VILLAGER_HERO_MASON_GIFT;
+    public static List<String> VILLAGER_HERO_SHEPHERD_GIFT;
+    public static List<String> VILLAGER_HERO_TOOLSMITH_GIFT;
+    public static List<String> VILLAGER_HERO_WEAPONSMITH_GIFT;
 
     static {
-        CAT_MORNING_GIFT = Arrays.asList(LootTables.CAT_MORNING_GIFT_GAMEPLAY.toString());
-        FISHING_TREASURES = Arrays.asList(LootTables.FISHING_TREASURE_GAMEPLAY.toString());
-        PIGLIN_BARTERING = Arrays.asList(LootTables.PIGLIN_BARTERING_GAMEPLAY.toString());
+        CAT_MORNING_GIFT = List.of(LootTables.CAT_MORNING_GIFT_GAMEPLAY.toString());
+        FISHING_JUNK = List.of(LootTables.FISHING_JUNK_GAMEPLAY.toString());
+        FISHING_TREASURES = List.of(LootTables.FISHING_TREASURE_GAMEPLAY.toString());
+        PIGLIN_BARTERING = List.of(LootTables.PIGLIN_BARTERING_GAMEPLAY.toString());
+        VILLAGER_HERO_ARMORER_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_ARMORER_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_BUTCHER_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_BUTCHER_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_CARTOGRAPHER_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_CARTOGRAPHER_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_CLERIC_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_CLERIC_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_FARMER_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_FARMER_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_FISHERMAN_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_FISHERMAN_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_FLETCHER_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_FLETCHER_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_LEATHERWORKER_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_LEATHERWORKER_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_LIBRARIAN_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_LIBRARIAN_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_MASON_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_MASON_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_SHEPHERD_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_SHEPHERD_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_TOOLSMITH_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_TOOLSMITH_GIFT_GAMEPLAY.toString());
+        VILLAGER_HERO_WEAPONSMITH_GIFT = List.of(LootTables.HERO_OF_THE_VILLAGE_WEAPONSMITH_GIFT_GAMEPLAY.toString());
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
